# kiuikit

./: .buildinfo  .gitignore  AGENTS.md  CNAME  MANIFEST.in  README.md  index.html  objects.inv  pyproject.toml  searchindex.js  setup.py  test.py
.doctrees/: agent.doctree  blender.doctree  camera.doctree  cli.doctree  environment.pickle  equirect.doctree  index.doctree  mesh.doctree  misc.doctree  misc_api.doctree  misc_cli.doctree  ops.doctree  remesh.doctree  render.doctree  slurm.doctree  sys.doctree  utils.doctree  video.doctree  vis.doctree
.github/workflows/: docs.yaml  pypi-publish.yml
_modules/: index.html
_modules/kiui/cam/: index.html
_modules/kiui/equirect/: index.html
_modules/kiui/grid_put/: index.html
_modules/kiui/mesh/: index.html
_modules/kiui/mesh_utils/: index.html
_modules/kiui/op/: index.html
_modules/kiui/sr/: index.html
_modules/kiui/timer/: index.html
_modules/kiui/utils/: index.html
_modules/kiui/video/: index.html
_modules/kiui/vis/: index.html
_sources/: agent.md.txt  blender.md.txt  camera.md.txt  equirect.md.txt  index.md.txt  mesh.md.txt  misc_cli.md.txt  render.md.txt  slurm.md.txt  sys.md.txt  video.md.txt
_static/: documentation_options.js
agent/: index.html
blender/: index.html
camera/: index.html
cli/: index.html
docs/: readme.md  requirements.txt
docs/source/: agent.md  blender.md  camera.md  conf.py  index.md  mesh.md  misc.md  misc_api.md  ops.md  remesh.md  render.md  slurm.md  sys.md  utils.md  video.md  vis.md
equirect/: index.html
genindex/: index.html
kiui/: __init__.py  bg.py  cam.py  config.py  env.py  equirect.py  geocalib.py  grid_put.py  hed.py  loss.py  lpips.py  mesh.py  mesh_utils.py  nn.py  op.py  panorama.py  pose.py  poser.py  quaternion.py  render.py  render_viser.py  slurm.py  sr.py  sys.py  timer.py  torch_utils.py  typing.py  utils.py  video.py  vis.py  vis_utils.py
kiui/agent/: __init__.py  backend.py  cli.py  context.py  hub.py  hubclient.py  interrupt.py  io.py  library.py  library_cli.py  models.py  permissions.py  personas.py  process_supervisor.py  prompts.py  readme.md  rewind.py  session_store.py  skills.py  storage.py  streaming.py  subagent.py  terminal.py  tool_results.py  tools.py  ui.py  utils.py  web.py
kiui/agent/backend/: __init__.py  commands.py  goals.py  sessions.py  skill_commands.py
kiui/agent/frontend/: README.md  index.html  package-lock.json  package.json  tsconfig.app.json  tsconfig.app.tsbuildinfo  tsconfig.node.json  tsconfig.node.tsbuildinfo  vite.config.d.ts  vite.config.js  vite.config.ts
kiui/agent/personas/: __init__.py  chatter.py  coder.py  common.py  reviewer.py
kiui/agent/prompts/: coder.md
kiui/agent/providers/: __init__.py  auth.py  openai_codex.py  openai_codex_oauth.py  openai_compatible.py  registry.py  types.py
kiui/cli/: aes.py  bg.py  blender_qremesh.py  blender_render.py  blip.py  clip.py  clip_sim.py  clip_sim_text.py  convert.py  convert_fp16.py  depth.py  depth_midas.py  depth_zoe.py  dircmp.py  hed.py  lock_version.py  pose.py  remesh.py  renderer.py  timer.py
kiui/gridencoder/: backend.py  grid.py
kiui/nn/: __init__.py  activation.py  attention_flash.py  attention_xformers.py  dit.py  encoder.py  flow_matching.py  llm.py  perciever.py  sparse.py  transformer.py  unet_2d.py  unet_2d_cond.py  unet_3d_cond.py  utils.py  vae_2d.py  vae_3d.py
kiui/openpose/: __init__.py  body.py  face.py  hand.py  util.py
mesh/: index.html
misc/: index.html
misc_api/: index.html
misc_cli/: index.html
ops/: index.html
py-modindex/: index.html
remesh/: index.html
render/: index.html
search/: index.html
slurm/: index.html
sys/: index.html
tests/: test_agent_backend.py  test_agent_cli.py  test_agent_codex.py  test_agent_completer.py  test_agent_context_policy.py  test_agent_goal.py  test_agent_hub.py  test_agent_io.py  test_agent_library.py  test_agent_models.py  test_agent_pdf_reading.py  test_agent_permissions.py  test_agent_personas.py  test_agent_providers.py  test_agent_safety_context.py  test_agent_session_store.py  test_agent_skills.py  test_agent_storage.py  test_agent_streaming.py  test_agent_subagent.py  test_agent_tools.py  test_agent_ui.py  test_agent_web.py  test_env.py  test_remap_uv.py  test_seed.py  test_timer.py
utils/: index.html
video/: index.html
vis/: index.html
(+67 files in other folders)
