[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "kiui"
version = "0.3.5"
description = "A toolkit for 3D vision"
readme = { file = "README.md", content-type = "text/markdown" }
license = { file = "LICENSE" }
authors = [
  { name = "kiui", email = "ashawkey1999@gmail.com" },
]
urls = { Homepage = "https://github.com/ashawkey/kiuikit" }

requires-python = ">=3.10"

dependencies = [
  "lazy_loader",
  "varname",
  "objprint",
  "rich",
  "questionary",
  "pyyaml",
]

[project.optional-dependencies]
kia = [
  "openai",
  "tyro",
  "prompt_toolkit",
  "ddgs",
  "httpx",
  "beautifulsoup4",
  "pathspec",
  "filelock",
  "fastapi>=0.120",
  "uvicorn[standard]>=0.38",
  "websockets>=12",
]
full = [
  "torch", # keep this so the doc can be built successfully
  "tqdm",
  "numpy",
  "scipy",
  "scikit-image",
  "scikit-learn",
  "pandas",
  "trimesh",
  "pygltflib",
  "matplotlib",
  "opencv-python",
  "imageio",
  "imageio-ffmpeg",
  "dearpygui",
  "tyro",
  "viser",
  "pymeshlab",
  "huggingface_hub",
  "PyMCubes",
  "fbxloader",
  "envlight",
  "prompt_toolkit",
  "pygments",
  "openai",
  "httpx",
  "beautifulsoup4",
  "ddgs",
  "pathspec",
  "filelock",
  "fastapi>=0.120",
  "uvicorn[standard]>=0.38",
  "websockets>=12",
]

[project.scripts]
kire = "kiui.render:main"
kisr = "kiui.sr:main"
kivi = "kiui.video:main"
kiss = "kiui.sys:main"
ks = "kiui.slurm:main"
kia = "kiui.agent.cli:main"
kib = "kiui.agent.library_cli:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
"kiui.agent" = ["bundled_skills/**/*"]

[tool.setuptools.exclude-package-data]
"*" = ["**/__pycache__/*", "**/*.py[cod]"]

[tool.setuptools.packages.find]
where = ["."]
include = ["kiui*"]
